--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,6 +26,7 @@ if linkage != nil
 end
 
 target 'ReactNativeRiskSample' do
+  use_modular_headers!
   config = use_native_modules!
 
   # Flags change depending on the env values.
